test/spec/global.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/global.wast
(;; STDOUT ;;;
out/test/spec/global.wast:221: assert_trap passed: undefined table index
out/test/spec/global.wast:243: assert_invalid passed:
  error: can't global.set on immutable global at index 0.
  0000029: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:252: assert_invalid passed:
  0000013: error: expected END opcode after initializer expression
out/test/spec/global.wast:257: assert_invalid passed:
  000000e: error: unexpected opcode in initializer expression: 0x20
out/test/spec/global.wast:262: assert_invalid passed:
  0000013: error: expected END opcode after initializer expression
out/test/spec/global.wast:267: assert_invalid passed:
  0000010: error: expected END opcode after initializer expression
out/test/spec/global.wast:272: assert_invalid passed:
  000000e: error: unexpected opcode in initializer expression: 0x1
out/test/spec/global.wast:277: assert_invalid passed:
  error: type mismatch at global initializer expression. got f32, expected i32
  0000013: error: EndGlobalInitExpr callback failed
out/test/spec/global.wast:282: assert_invalid passed:
  0000010: error: expected END opcode after initializer expression
out/test/spec/global.wast:287: assert_invalid passed:
  error: invalid global initializer expression, must be a constant expression
  000000e: error: EndGlobalInitExpr callback failed
out/test/spec/global.wast:292: assert_invalid passed:
  0000000: error: initializer expression can only reference an imported global
  0000010: error: EndGlobalInitExpr callback failed
out/test/spec/global.wast:297: assert_invalid passed:
  0000000: error: global variable out of range: 1 (max 1)
  0000010: error: EndGlobalInitExpr callback failed
out/test/spec/global.wast:305: assert_malformed passed:
  0000026: error: global mutability must be 0 or 1
out/test/spec/global.wast:318: assert_malformed passed:
  0000026: error: global mutability must be 0 or 1
out/test/spec/global.wast:335: assert_malformed passed:
  0000011: error: global mutability must be 0 or 1
out/test/spec/global.wast:347: assert_malformed passed:
  0000011: error: global mutability must be 0 or 1
out/test/spec/global.wast:361: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:370: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:380: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:390: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000027: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:400: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  000002a: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:410: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:420: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:430: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:440: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:449: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:458: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000027: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:468: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  000003e: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:486: assert_malformed passed:
  out/test/spec/global/global.32.wat:1:33: error: redefinition of global "$foo"
  (global $foo i32 (i32.const 0))(global $foo i32 (i32.const 0))
                                  ^^^^^^
out/test/spec/global.wast:490: assert_malformed passed:
  out/test/spec/global/global.33.wat:1:34: error: redefinition of global "$foo"
  (import "" "" (global $foo i32))(global $foo i32 (i32.const 0))
                                   ^^^^^^
out/test/spec/global.wast:494: assert_malformed passed:
  out/test/spec/global/global.34.wat:1:34: error: redefinition of global "$foo"
  (import "" "" (global $foo i32))(import "" "" (global $foo i32))
                                   ^^^^^^
76/76 tests passed.
;;; STDOUT ;;)
